--- a/README
+++ b/README
@@ -2,9 +2,17 @@
   autobuild  -  dead simple automation
 
   Triggers arbitary shell commands on filesystem events.
+  By default monitors current working directory, which can be changed with -d
+  flag. 
+
+  It ignores events that are notified after the command is run, for avoiding endless loops.
+  This ignore duration in seconds can be changed with -i flag.
+
+  On Mac OS X, there is additional value 'latency', which can be changed with -l flag
 
   For example, automatically run test-suite
   $ autobuild make check
 
   Or build a website 
   $ autobuild 'cat header.html content.html footer.html > index.html'
+
